--- a/.github/update.yml
+++ b/.github/update.yml
@@ -1,4 +1,4 @@
-name: Auto-Update 
+name: Auto-Update Jojo.txt
 
 on:
   schedule:
@@ -33,7 +33,7 @@ jobs:
           import re
           import sys
 
-          FILE_NAME = "index.html"
+          FILE_NAME = "Jojo.txt"
           JIO_SOURCE = "https://livetv-cb7.pages.dev/hotstar"
           ZEE_SOURCE = "https://join-vaathala1-for-more.vodep39240327.workers.dev/zee5.m3u"
           
